--- a/framework/bin/d4j/d4j-write.properties
+++ b/framework/bin/d4j/d4j-write.properties
@@ -36,7 +36,7 @@ $project->{prog_root} = $WORK_DIR;
 # printf("%s\n%s\n",$project->src_dir($VID),$project->test_dir($VID));
 
 my %versions = find_compile_source($WORK_DIR);
-# print_result($WORK_DIR, $versions{source}, $versions{target});
+print_result($WORK_DIR, $versions{source}, $versions{target});
 
 my $SRCDIR = $project->src_dir($VID);
 my $TESTDIR = $project->test_dir($VID);
@@ -57,7 +57,7 @@ sub find_compile_source {
     @_ == 1 or die $ARG_ERROR;
     my ($work_dir) = @_;
     my $dir = $work_dir;
-    my @target_files = qw(build.xml maven-build.xml pom.xml default.properties);
+    my @target_files = qw(build.xml maven-build.xml pom.xml default.properties maven.properties maven-build.properties build.properties);
     my %versions;
     # 遍历当前目录下的文件
     opendir(my $dh, $dir) or die "无法打开目录 $dir: $!";
@@ -66,10 +66,13 @@ sub find_compile_source {
         next unless grep { $file eq $_ } @target_files;  # 匹配目标文件名
 
         # print "检查文件: $file\n";
-        if ($file =~ /\.xml$/) {
-            %versions = parse_xml_file("$dir/$file");
-        } elsif ($file =~ /default\.properties$/) {
+        if ($file =~ /\.properties$/) {
             %versions =  parse_properties_file("$dir/$file");
+        }
+        if (%versions && $versions{source} eq 'null' && $versions{target} eq 'null') {
+            if ($file =~ /\.xml$/) {
+                %versions = parse_xml_file("$dir/$file");
+            }
         }
     }
     closedir($dh);
@@ -173,9 +176,9 @@ sub parse_properties_file {
     while (<$fh>) {
         chomp;
         next if /^\s*#/;  # 忽略注释
-        if (/compile\.source\s*=\s*(\d+\.\d+)/) {
+        if (/.*compile\.source\s*=\s*(\d+\.\d+)/) {
             $source = $1;
-        } elsif (/compile\.target\s*=\s*(\d+\.\d+)/) {
+        } elsif (/.*compile\.target\s*=\s*(\d+\.\d+)/) {
             $target = $1;
         }
     }
