--- a/framework/bin/d4j/d4j-write.properties
+++ b/framework/bin/d4j/d4j-write.properties
@@ -64,15 +64,16 @@ sub find_compile_source {
     while (my $file = readdir($dh)) {
         next unless -f "$dir/$file";  # 只处理普通文件
         next unless grep { $file eq $_ } @target_files;  # 匹配目标文件名
-
+        if (%versions && ($versions{source} ne 'null' || $versions{target} ne 'null')) {
+            # print_result($file, $versions{source}, $versions{target});
+            # print "break\n";
+            last;
+        }
         # print "检查文件: $file\n";
         if ($file =~ /\.properties$/) {
             %versions =  parse_properties_file("$dir/$file");
-        }
-        if (%versions && $versions{source} eq 'null' && $versions{target} eq 'null') {
-            if ($file =~ /\.xml$/) {
-                %versions = parse_xml_file("$dir/$file");
-            }
+        } elsif ($file =~ /\.xml$/) {
+            %versions = parse_xml_file("$dir/$file");
         }
     }
     closedir($dh);
@@ -89,9 +90,13 @@ sub parse_xml_file {
             SuppressEmpty => 1
         ) 
     };
+    my %versions = (
+        source => 'null',
+        target => 'null'
+    );
     if ($@) {
         warn "XML 解析错误: $@";
-        return;
+        return wantarray ? %versions : \%versions;;
     }
     
     # Ant 的 build.xml（查找 javac 的 source/target）
@@ -99,17 +104,19 @@ sub parse_xml_file {
         #查找property属性是否定义了编译版本
         my %global_props;
         if (ref($xml->{property})) {
-            foreach my $prop (@{ $xml->{property} }) {
+            # print Dumper($xml->{property}), "\n";
+            foreach my $prop (@{ $xml->{property} }) { 
                 my $name = $prop->{name} || '';
                 my $value = $prop->{value} || '';
-                if ($name =~ /javac\.source/i) {
+                # print "$name $value\n";
+                if ($name =~ /.*\.source/i) {
                     $global_props{source} = $value;
-                } elsif ($name =~ /javac\.target/i) {
+                } elsif ($name =~ /.*\.target/i) {
                     $global_props{target} = $value;
                 }
             }
         }
-        my %versions = (source => 'null', target => 'null');
+        # my %versions = (source => 'null', target => 'null');
         if (defined $global_props{source} || defined $global_props{target}) {
             $versions{source} = $global_props{source};
             $versions{target} = $global_props{target};
@@ -123,10 +130,10 @@ sub parse_xml_file {
                     $target = $node->{target} || $node->{'@target'};
                 }
             };
-            # print_result($file, $source, $target);
             $versions{source} = $source if $source;
             $versions{target} = $target if $target;
         }
+        # print_result($file, $versions{source}, $versions{target});
         return wantarray ? %versions : \%versions;
     }
     # Maven 的 pom.xml（查找 maven-compiler-plugin 配置）
@@ -138,13 +145,14 @@ sub parse_xml_file {
             $target = $xml->{build}[0]{plugins}[0]{plugin}
                 ->[0]{configuration}[0]{target}[0];
         };
-        my %versions = (
+        %versions = (
             source => $source || 'null',
             target => $target || 'null'
         );
         return wantarray ? %versions : \%versions;
         # print_result($file, $source, $target);
     }
+    return wantarray ? %versions : \%versions;
 }
 
 # 递归查找 Ant 的 javac 节点
