bug fix for d4j-write.properties

--- a/framework/bin/d4j/d4j-write.properties
+++ b/framework/bin/d4j/d4j-write.properties
@@ -108,11 +108,12 @@ sub parse_xml_file {
             foreach my $prop (@{ $xml->{property} }) { 
                 my $name = $prop->{name} || '';
                 my $value = $prop->{value} || '';
-                # print "$name $value\n";
-                if ($name =~ /.*\.source/i) {
-                    $global_props{source} = $value;
-                } elsif ($name =~ /.*\.target/i) {
-                    $global_props{target} = $value;
+                if ($value =~ /^\d+(\.\d+)?$/) {
+                    if ($name =~ /.*\.source/i) {
+                        $global_props{source} = $value;
+                    } elsif ($name =~ /.*\.target/i) {
+                        $global_props{target} = $value;
+                    }
                 }
             }
         }
@@ -128,10 +129,15 @@ sub parse_xml_file {
                 foreach my $node (@javac_nodes) {
                     $source = $node->{source} || $node->{'@source'};
                     $target = $node->{target} || $node->{'@target'};
+                    if ($source || $target) {
+                        last;
+                    }
                 }
             };
+            # print_result($file, $source, $target);
             $versions{source} = $source if $source;
             $versions{target} = $target if $target;
+
         }
         # print_result($file, $versions{source}, $versions{target});
         return wantarray ? %versions : \%versions;
@@ -145,10 +151,8 @@ sub parse_xml_file {
             $target = $xml->{build}[0]{plugins}[0]{plugin}
                 ->[0]{configuration}[0]{target}[0];
         };
-        %versions = (
-            source => $source || 'null',
-            target => $target || 'null'
-        );
+        $versions{source} = $source if $source && $source =~ /^\d+(\.\d+)?$/;
+        $versions{target} = $target if $target && $target =~ /^\d+(\.\d+)?$/;
         return wantarray ? %versions : \%versions;
         # print_result($file, $source, $target);
     }
